# FPiris-revisi-1

./: README.md
devel/: .catkin  local_setup.sh  setup.sh
devel/include/beginner_tutorials/: DataPckeMotor.h  Num.h  TitikTengahBola.h
devel/lib/beginner_tutorials/: kamera  lebar  listener  motor  panjang  pc  stalker  talker  tinggi  volume
devel/lib/pkgconfig/: beginner_tutorials.pc
devel/lib/python3/dist-packages/beginner_tutorials/msg/: _DataPckeMotor.py  _Num.py  _TitikTengahBola.py  __init__.py
devel/share/Kamera/cmake/: Kamera-msg-paths.cmake
devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
devel/share/common-lisp/ros/beginner_tutorials/msg/: DataPckeMotor.lisp  Num.lisp  TitikTengahBola.lisp  _package.lisp  _package_DataPckeMotor.lisp  _package_Num.lisp  _package_TitikTengahBola.lisp  beginner_tutorials-msg.asd
devel/share/gennodejs/ros/beginner_tutorials/msg/: DataPckeMotor.js  Num.js  TitikTengahBola.js  _index.js
devel/share/roseus/ros/beginner_tutorials/: manifest.l
devel/share/roseus/ros/beginner_tutorials/msg/: DataPckeMotor.l  Num.l  TitikTengahBola.l
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/launch/: launch.launch
src/beginner_tutorials/msg/: DataPckeMotor.msg  Num.msg  TitikTengahBola.msg
src/beginner_tutorials/src/: CMakeCache.txt  Makefile  app  cmake_install.cmake  kamera.cpp  lebar.cpp  motor.cpp  pc.cpp
